--- a/styles.css
+++ b/styles.css
@@ -136,3 +136,27 @@ a:visited {
     margin-right: auto;
 }
 
+.blockList {
+    display: flex;
+    flex-flow: column wrap;
+    flex-direction: row;
+    list-style: none;
+    color: #222831;
+    font-weight: 100;
+}
+
+.blockListItem {
+    margin-bottom: 3px;
+    margin-top: 3px;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: #e2e2e2;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border: solid;
+    border-width: 1px;
+    border-color: #e2e2e2;
+    border-radius: 15px;
+}
