--- a/styles.css
+++ b/styles.css
@@ -31,18 +31,13 @@ a:visited {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    
-}
-
-.titleBlockLayer2 {
-    padding: 10px;
-    display: flex;
-    flex-flow: column wrap; /* allows content to wrap which helps with smaller screens */
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     box-shadow: 0px 3px 5px 1px #c0c0c0;
     border-radius: 5px;
+    max-width: 900px;
+    min-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
 }
 
 .titleText {
@@ -92,7 +87,7 @@ a:visited {
     margin-left: auto;
     margin-right: auto;
     min-width: 350px;
-    max-width: 720px;
+    max-width: 900px;
     
     margin-bottom: 10px;
 }
