--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,15 @@ a:visited {
 }
 
 .blockParagraph {
+    display: none;
+    color: #636363;
+    font-weight: 100;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.blockSummary {
+    display: block;
     color: #636363;
     font-weight: 100;
     margin-left: auto;
@@ -154,4 +163,15 @@ a:visited {
     border-width: 1px;
     border-color: #e2e2e2;
     border-radius: 15px;
+}
+
+.blockParagraphButtonClass {
+    background-color: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom-width: 1px;
+    border-bottom-color: #e2e2e2;
+    text-align: center;
+    width: 100%; /* sets the width to be 100% of the parent element, which I believe would be "block" being 900px at most and 350px at least */
 }
